--- a/css/styles.css
+++ b/css/styles.css
@@ -12,14 +12,14 @@
 
 * {
   margin: 0;
-  padding: 0;
+  /* padding: 0; */
 }
 
 body {
   font-family: var(--primary-font);
   font-size: 16px;
   line-height: 24px;
-  color: var(--primary-accent-color);
+  color: var(--primary-text-color);
   background-color: var(--primary-white-color);
 }
 
@@ -32,15 +32,15 @@ a {
   font-style: normal;
 }
 
-img {
+/* img {
   display: block;
-}
+} */
 
 h1 {
   font-size: 56px;
   line-height: 60px;
   color: var(--primary-white-color);
-  width: 496px;
+  /* width: 496px; */
   margin: 0 auto 48px;
 }
 
@@ -60,7 +60,7 @@ h3 {
 }
 
 .container {
-  width: 1128px;
+  /* width: 1128px; */
   margin: 0 auto;
 }
 
@@ -73,21 +73,21 @@ footer,
   background-color: var(--secondary-accent-color);
 }
 
-header {
+/* header {
   padding: 24px 0;
-}
+} */
 
-.header-section,
+/* .header-section,
 nav {
   display: flex;
   justify-content: space-between;
-}
+} */
 
-.header-menu {
+/* .header-menu {
   display: flex;
   justify-content: space-between;
   gap: 40px;
-}
+} */
 
 .header-menu a {
   color: var(--primary-accent-color);
@@ -106,7 +106,7 @@ nav {
   font-size: 18px;
   line-height: 21px;
   margin-right: 76px;
-  display: block;
+  /* display: block; */
 }
 
 header .logo span {
@@ -117,11 +117,11 @@ footer .logo span {
   color: var(--secondary-accent-color);
 }
 
-.contacts ul {
+/* .contacts ul {
   display: flex;
   justify-content: space-between;
   gap: 40px;
-}
+} */
 
 .contacts a {
   color: var(--primary-accent-color);
@@ -132,14 +132,14 @@ footer .logo span {
 }
 
 .main-section {
-  padding: 188px 0;
+  /* padding: 188px 0; */
   text-align: center;
 }
 
 .order-btn {
-  padding: 16px 32px;
+  /* padding: 16px 32px; */
   border: none;
-  border-radius: 3px;
+  /* border-radius: 3px; */
   background-color: var(--secondary-text-color);
   color: var(--primary-white-color);
   cursor: pointer;
@@ -149,60 +149,60 @@ footer .logo span {
   background-color: var(--hoover-text-color);
 }
 
-.features-section,
+/* .features-section,
 .team-section,
 .portfolio-section {
   padding: 120px 0;
-}
+} */
 
-.features-section ul {
+/* .features-section ul {
   display: flex;
   justify-content: space-between;
   gap: 24px;
-}
+} */
 
 .team-section {
   background-color: var(--secondary-accent-color);
 }
 
-.team-section ul {
+/* .team-section ul {
   display: flex;
   justify-content: space-between;
-}
+} */
 
 .team-item {
   background-color: var(--primary-white-color);
 }
 
 .team-item-description {
-  padding: 32px 16px;
+  /* padding: 32px 16px; */
   text-align: center;
 }
 
-.portfolio-section ul {
+/* .portfolio-section ul {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 24px;
   row-gap: 48px;
-}
+} */
 
 .portfolio-item {
   border: 1px solid var(--border-color);
 }
 
-.portfolio-item-description {
+/* .portfolio-item-description {
   padding: 32px 16px;
-}
+} */
 
-footer {
+/* footer {
   padding: 100px 0;
-}
+} */
 
 footer .logo {
   margin-bottom: 16px;
 }
 
 .footer-text {
-  width: 264px;
+  /* width: 264px; */
   color: var(--secondary-accent-color);
 }
